# meta-agent

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  README.md  task_docs_baseline_guardrails.md
.github/workflows/: ci.yml
meta-agent/: DOC_DELTA.md  PLAYBOOK.md  PROJECT_MAP.md  README.md
meta-agent/agents/: dotnet-agent.json
meta-agent/ci/: gitlab-ci.yml
meta-agent/config/: release-version-markers.json  template-layout.json
meta-agent/docs/: README.md
meta-agent/dotnet/: .gitignore  MetaAgent.slnx
meta-agent/examples/: sample_config.json
meta-agent/schema/: meta-agent-policy.schema.json
meta-agent/scripts/: canonical-regression-tasks.json  check-doc-command-alignment.py  check-version-sync.py  clean-worktree.py  compose-templates.py  manage-doc-delta.py  package-release.py  pre-release-verify.py  run-regression-harness.py  scan-markdown-links.py  structurizr-site.py  sync-version-markers.py  test-compose-templates.py  test-manage-doc-delta.py  test-package-release.py  test-pre-release-verify.py  (+5 more)
meta-agent/template-src/base/scripts/: README.md  add-johnny-decimal-entry.py  check-pkb-staging.py  johnny-decimal-config.json  pyproject.toml  requirements-dev.txt  scan-markdown-links.py  validate-johnny-decimal.py  verify-architecture.py
meta-agent/template-src/base/scripts/johnny_decimal/: __init__.py  add_entry.py  shared.py
meta-agent/template-src/base/scripts/tests/: __init__.py  test_add_johnny_decimal_entry.py  test_check_pkb_staging.py  test_scan_markdown_links.py  test_validate_johnny_decimal.py  test_verify_architecture.py
(+184 files in other folders)
