# Pytest and coverage for scripts in this directory.
# Run from this directory: pytest  (or: python -m pytest)
[project]
name = "ai-test-scripts"
version = "0.1.0"
description = "Scripts and tests for ai-test repo"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --no-cov-on-fail"

[tool.coverage.run]
source = ["."]
branch = false
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
